--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python==3.8
+#python==3.8
 numpy
 pandas
 scikit-learn
@@ -8,3 +8,6 @@ fastapi==0.63.0
 uvicorn
 gunicorn
 requests
+jupyter 
+jupyterlab
+dvc
